[project]
name = "latest_ai_flow"
version = "0.1.0"
description = "latest-ai-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai[tools]==1.14.3",
    "crewai[litellm]==1.14.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
kickoff = "latest_ai_flow.main:kickoff"
run_crew = "latest_ai_flow.main:kickoff"
plot = "latest_ai_flow.main:plot"
run_with_trigger = "latest_ai_flow.main:run_with_trigger"
run_api = "latest_ai_flow.api:run_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
